--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ APP_KEY=bwToUleGoYyooyGVwRo5NH0h2VXdgXN0
 DRIVE_DISK=local
 SESSION_DRIVER=cookie
 CACHE_VIEWS=false
+DB_CONNECTION=mysql
+MYSQL_PORT=3306
+MYSQL_PASSWORD=
